[gd_scene load_steps=7 format=2]

[ext_resource path="res://testweaponspack.png" type="Texture" id=1]
[ext_resource path="res://Gun.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 98, 20, 14 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 68, 41, 13 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "blaster",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "minigun",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 18.5 )

[node name="Gun" type="Area2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "minigun"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Gun_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Gun_area_exited"]
[connection signal="pickup" from="." to="." method="_on_Gun_pickup"]
